updating footer text

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
       <footer class="bg-dark text-white">
         <div class="container text-center py-5">
           <small>
-            a <a class="link-info list-group-item-action text-decoration-none" href="https://jonchius.com" target="_blank">jonchius</a> production
+            a <a class="link-info list-group-item-action text-decoration-none" href="https://joncoded.com" target="_blank">joncoded</a> 
+            (aka <a class="link-info list-group-item-action text-decoration-none" href="https://jonchius.com" target="_blank">jonchius</a>) project
           </small>
         </div>
       </footer>
