updating header title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient">
         <div class="container d-flex justify-content-between align-items-center p-2">
-          <span><a href="index.html" class="h1 text-white text-decoration-none" x-text="appName"></a></span>
+          <span><span aria-hidden="true" x-text="appEmoji"></span> <a href="index.html" class="h4 text-white text-decoration-none" x-text="appName"></a></span>
           <span><a href="index.html" class="text-white text-decoration-none"><span aria-hidden="true">🏠</span> home</a></span>
         </div>
       </nav>
