--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div x-data="app()" x-init="init()" class="d-flex flex-column min-vh-100">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient">
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container d-flex justify-content-between align-items-center p-2">
-          <span><span aria-hidden="true" x-text="appEmoji"></span> <a href="index.html" class="h4 text-white text-decoration-none" x-text="appName"></a></span>
+          <span><span aria-hidden="true" className="fs-5" x-text="appEmoji"></span> <a href="index.html" class="text-white fw-bolder fs-5 text-decoration-none" x-text="appName"></a></span>
           <span><a href="index.html" class="text-white text-decoration-none"><span aria-hidden="true">🏠</span> home</a></span>
         </div>
       </nav>
